--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/CheckList.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/CheckList.cshtml
@@ -25,23 +25,58 @@
     </style>
 }
 @Html.Partial("~/Areas/FinalInspection/Views/Shared/_Inspection_Layout.cshtml")
-<div class="DownWhiteBackgrond">
-    @using (Html.BeginForm("CheckList", "Inspection", FormMethod.Post, new { @id = "settingForm", onsubmit = "return checkSubmitValue(this.submitted);" }))
-    {
-        @Html.HiddenFor(o => o.ID)
-        @Html.HiddenFor(o =>o.POID)
-        <div style="padding:2em 3em 2em 3em;width:60%;float:left;position: absolute;transform: translate(-50%, 0%);left: 50%">
-            <table id="CheckListTable" class="cell-border" style="width:100%">
-            </table>
-        </div>
-        <div style="width:100%">
-            <input type="hidden" id="goPage" name="goPage">
-            <button id="btnBack" onclick="this.form.submitted=this.value;" type="submit" value="Back" class="button" style="right:7em;">Back</button>
-            <button id="btnNext" onclick="this.form.submitted=this.value;" type="submit" value="Next" style="right:0;" class="button">Next</button>
-        </div>
-    }
+    <div class="DownWhiteBackgrond">
+        @using (Html.BeginForm("CheckList", "Inspection", FormMethod.Post, new { @id = "settingForm", onsubmit = "return checkSubmitValue(this.submitted);" }))
+        {
+            @Html.HiddenFor(o => o.ID)
+            @Html.HiddenFor(o => o.POID)
+            <div style="padding:2em 3em 2em 3em;width:60%;float:left;position: absolute;transform: translate(-50%, 0%);left: 50%">
+                <table id="CheckListTable" class="cell-border" style="width:100%"></table>
+            </div>
+            <div style="width:100%">
+                <input type="hidden" id="goPage" name="goPage">
+                <button id="btnBack" onclick="this.form.submitted=this.value;" type="submit" value="Back" class="button" style="right:7em;">Back</button>
+                <button id="btnNext" onclick="this.form.submitted=this.value;" type="submit" value="Next" style="right:0;" class="button">Next</button>
+            </div>
+            @*@Html.CheckBox("CheckCloseShade",false)*@
+            @*<input name="CheckCloseShade" type="hidden" value="true">
+            <input name="CheckHandfeel" type="hidden" value="@Model.CheckHandfeel">
+            <input name="CheckAppearance" type="hidden" value="@Model.CheckAppearance">
+            <input name="CheckPrintEmbDecorations" type="hidden" value="@Model.CheckPrintEmbDecorations">
+            <input name="CheckFiberContent" type="hidden" value="@Model.CheckFiberContent">
 
-</div>
+            <input name="CheckCareInstructions" type="hidden" value="@Model.CheckCareInstructions">
+            <input name="CheckDecorativeLabel" type="hidden" value="@Model.CheckDecorativeLabel">
+            <input name="CheckAdicomLabel" type="hidden" value="@Model.CheckAdicomLabel">
+            <input name="CheckCountryofOrigion" type="hidden" value="@Model.CheckCountryofOrigion">
+            <input name="CheckSizeKey" type="hidden" value="@Model.CheckSizeKey">
+
+            <input name="Check8FlagLabel" type="hidden" value="@Model.Check8FlagLabel">
+            <input name="CheckAdditionalLabel" type="hidden" value="@Model.CheckAdditionalLabel">
+            <input name="CheckShippingMark" type="hidden" value="@Model.CheckShippingMark">
+            <input name="CheckPolytagMarketing" type="hidden" value="@Model.CheckPolytagMarketing">
+            <input name="CheckColorSizeQty" type="hidden" value="@Model.CheckColorSizeQty">
+            <input name="CheckHangtag" type="hidden" value="@Model.CheckHangtag">*@
+            @*@Html.HiddenFor(o => o.CheckCloseShade)
+            @Html.HiddenFor(o => o.CheckHandfeel)
+            @Html.HiddenFor(o => o.CheckAppearance)
+            @Html.HiddenFor(o => o.CheckPrintEmbDecorations)
+            @Html.HiddenFor(o => o.CheckFiberContent)
+            @Html.HiddenFor(o => o.CheckCareInstructions)
+            @Html.HiddenFor(o => o.CheckDecorativeLabel)
+            @Html.HiddenFor(o => o.CheckAdicomLabel)
+            @Html.HiddenFor(o => o.CheckCountryofOrigion)
+            @Html.HiddenFor(o => o.CheckSizeKey)
+
+            @Html.HiddenFor(o => o.Check8FlagLabel)
+            @Html.HiddenFor(o => o.CheckAdditionalLabel)
+            @Html.HiddenFor(o => o.CheckShippingMark)
+            @Html.HiddenFor(o => o.CheckPolytagMarketing)
+            @Html.HiddenFor(o => o.CheckColorSizeQty)
+            @Html.HiddenFor(o => o.CheckHangtag)*@
+        }
+
+    </div>
 @section FinalInspection_script
 {
     <script>
@@ -55,6 +90,8 @@
         // 設定大小寫
         var True = true;
         var False = false;
+
+        var table;
 
         // name, td:value, td:checkbox
         adata.push([null, 'Fabric Artwork Check List',
@@ -87,7 +124,7 @@
         ]);
 
         $(function () {
-            var table = $('#CheckListTable').DataTable({
+            table = $('#CheckListTable').DataTable({
                 data: adata,
                 autoWidth: false,
                 destroy: true,
@@ -134,12 +171,16 @@
             var list = d[2];
             var sTr = "";
             $(list).each(function (index, value) {
-                sTr = sTr + "<tr><td style='width:95%'>" + value[1] + "</td>";
+
+                sTr = sTr + '<tr><td style="width:95%">' + value[1] + '</td>';
                 if (value[2]) {
-                    sTr = sTr + "<td style='vertical-align: middle'><input type='checkbox' id='"+ value[0] +"' name='" + value[0] + "' checked /></td></tr>";
+                    //sTr = sTr + '<td style="vertical-align: middle"><input type="checkbox" id="' + value[0] + '" name="' + value[0] + '" checked /></td></tr>';
+                    sTr = sTr + '<td style="vertical-align: middle"><input checked="checked" data-val="true" id="' + value[0] + '" name="' + value[0] +'" type="checkbox" value="true"></td></tr>';
+
                 }
                 else {
-                    sTr = sTr + "<td style='vertical-align: middle'><input type='checkbox' id='" + value[0] +"' name='" + value[0] + "'/></td></tr>";
+                    //sTr = sTr + '<td style="vertical-align: middle"><input type="checkbox" id="' + value[0] + '" name="' + value[0] + '"/></td></tr>';
+                    sTr = sTr + '<td style="vertical-align: middle"><input data-val="true"  id="' + value[0] + '" name="' + value[0] + '" type="checkbox" value="true"><input name="' + value[0] + '" type="hidden" value="false"></td></tr>';
                 }
             });
             return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">' +
@@ -149,6 +190,24 @@
 
         function checkSubmitValue(self) {
             document.getElementById("goPage").value = self;
+
+            var trlist = $("#CheckListTable tbody td.details-control");
+
+            trlist.each(function () {
+                var tr = $(this).closest('tr');
+                var row = table.row(tr);
+
+                if (row.child.isShown()) {
+                    // 打開的就不用管他
+                    //row.child.hide();
+                    //tr.removeClass('shown');
+                }
+                else {
+                    row.child(format(row.data())).show();
+                    tr.addClass('shown');
+                }
+            });
+
             return true;
         }
     </script>
