--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -71,6 +71,7 @@
 <div class="whiteBackgrond" style="display:flex;flex-wrap:nowrap;height:85vh;align-items:center; vertical-align:middle">
     @using (Html.BeginForm("GoGeneral", "Inspection", FormMethod.Post, new { @id = "settingForm", onsubmit = "return checkSubmitValue();" }))
     {
+        @Html.HiddenFor(o=>o.FinalInspectionID)
         <div style="padding:2em 3em 2em 3em">
             <div class="col-auto"><h1 style="font-size:2em">Inspection Setting</h1></div>
 
@@ -106,7 +107,7 @@
                 <div class="col-auto">
                     <table id="SelectedPOTable" class="cell-border " style="width:100%"></table>
                 </div>
-                <div class="col-auto" style="text-align:right"><p style="font-weight:bold;padding:10px 0">Total Available Qty <label id="totalAvailableQty" style="font-size:1.2em">0</label></p></div>
+                <div class="col-auto" style="text-align:right"><p style="font-weight:bold;padding:10px 0">Total Available Qty <label id="totalAvailableQty" style="font-size:1.2em">@ViewData["TotalAvailableQty"]</label></p></div>
             </div>
 
             @*AQL Plan*@
@@ -133,7 +134,7 @@
                     <tr>
                         <td><label>Reject Qty</label></td>
                         <td>
-                            <input id="RejectQty" type="number" class="form-control center-block" min="0" value="0" />
+                            <input id="RejectQty" type="number" class="form-control center-block" min="0" value="@ViewData["RejectQty"]" />
                         </td>
                     </tr>
                 </table>
@@ -252,6 +253,7 @@
                 }
                 else {
                     var orderID = row.data()[1];
+                    
                     row.child(format(row.data(), orderID)).show();
                     tr.addClass('shown');
                 }
