--- a/Quality/Quality/Areas/BulkFGT/Views/BulkFGTMailGroup/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/BulkFGTMailGroup/Index.cshtml
@@ -124,19 +124,22 @@
                         <td style="width: 20%; border: 1px solid gray; height: 25vh; font-size: 2vh; background-color: #696868; vertical-align: middle;">
                             <label>To Address</label>
                         </td>
-                        <td style="border: 1px solid gray; font-size: 2vh; vertical-align: middle; padding: 1vh; width: 80%; word-wrap: break-word; ">
+                        <td style="border: 1px solid gray; font-size: 2vh; vertical-align: top; padding: 1vh; width: 80%; word-wrap: break-word; ">
                             <span class="detail_Head" id="ToAddress"></span>
-                            <textarea class="input_Head" id="input_ToAddress" name="input_ToAddress" rows="3" cols="35" onkeydown="if(event.keyCode == 13) return false;"></textarea>
+                            <div class="container" style="display: flex;">
+                                <textarea class="input_Head" id="input_ToAddress" name="input_ToAddress" rows="3" cols="50" onkeydown="if(event.keyCode == 13) return false;"></textarea>
+                            </div>
                         </td>
                     </tr>
                     <tr>
                         <td style="width: 20%; border: 1px solid gray; height: 25vh; font-size: 2vh; background-color: #696868; vertical-align: middle;">
                             <label>Cc Address</label>
                         </td>
-                        <td style="border: 1px solid gray; font-size: 2vh; vertical-align: middle; padding: 1vh; width: 80%; word-wrap: break-word; ">
+                        <td style="border: 1px solid gray; font-size: 2vh; vertical-align: top; padding: 1vh; width: 80%; word-wrap: break-word; ">
                             <span class="detail_Head" id="CcAddress"></span>
-                            <textarea class="input_Head" id="input_CcAddress" name="input_CcAddress" rows="3" cols="35" onkeydown="if(event.keyCode == 13) return false;"></textarea>
-                         
+                            <div class="container" style="display: flex;">
+                                <textarea class="input_Head" id="input_CcAddress" name="input_CcAddress" rows="3" cols="50" onkeydown="if(event.keyCode == 13) return false;"></textarea>
+                            </div>
                         </td>
                     </tr>
                 </table>
