--- a/Quality/Quality/Views/PublicWondow/FGPTList.cshtml
+++ b/Quality/Quality/Views/PublicWondow/FGPTList.cshtml
@@ -7,7 +7,10 @@
 @model List<Window_FGPT>
 
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<link href="~/ThirdParty/plugins/DataTables/datatables.min.css" rel="stylesheet" />
+<link href="~/ThirdParty/SciCustom/css/TableStyle.css" rel="stylesheet" />
 
+<script src="~/ThirdParty/plugins/DataTables/datatables.min.js"></script>
 <style>
 
     ul {
