Update Bulk FGT Mail Group

--- a/Quality/Quality/Areas/BulkFGT/Views/BulkFGTMailGroup/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/BulkFGTMailGroup/Index.cshtml
@@ -127,7 +127,7 @@
                         <td style="border: 1px solid gray; font-size: 2vh; vertical-align: top; padding: 1vh; width: 80%; word-wrap: break-word; ">
                             <span class="detail_Head" id="ToAddress"></span>
                             <div class="container" style="display: flex;">
-                                <textarea class="input_Head" id="input_ToAddress" name="input_ToAddress" rows="3" cols="50" onkeydown="if(event.keyCode == 13) return false;"></textarea>
+                                <textarea class="input_Head" id="input_ToAddress" name="input_ToAddress" rows="3" cols="50" onkeydown="if(event.keyCode == 13) return false;" style="min-height: 23vh;" ></textarea>
                             </div>
                         </td>
                     </tr>
@@ -138,7 +138,7 @@
                         <td style="border: 1px solid gray; font-size: 2vh; vertical-align: top; padding: 1vh; width: 80%; word-wrap: break-word; ">
                             <span class="detail_Head" id="CcAddress"></span>
                             <div class="container" style="display: flex;">
-                                <textarea class="input_Head" id="input_CcAddress" name="input_CcAddress" rows="3" cols="50" onkeydown="if(event.keyCode == 13) return false;"></textarea>
+                                <textarea class="input_Head" id="input_CcAddress" name="input_CcAddress" rows="3" cols="50" onkeydown="if(event.keyCode == 13) return false;" style="min-height: 23vh;"></textarea>
                             </div>
                         </td>
                     </tr>
