Update SampleRFT PFTperLine  format

--- a/Quality/Quality/Areas/SampleRFT/Views/PFTperLine/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/PFTperLine/Index.cshtml
@@ -116,13 +116,13 @@
             <br />
             <div style=" padding-right: 2.5vw">
                 <div class="inner-scroll" style="float: left; height: 13vh; overflow-y: hidden">
-                    <table cellspacing="100" class="table-striped">
+                    <table cellspacing="100" class="table-striped" style="width:550%;">
                         <thead>
                             <tr>
                                 @foreach (DataColumn item in Model.MonthlyData.Columns)
                                 {
 
-                                    <th>@item.ColumnName</th>
+                                    <th style="width:10vw">@item.ColumnName</th>
                                 }
                             </tr>
                         </thead>
@@ -149,9 +149,9 @@
             <h3 class="fontColor">Daily RFT</h3>
             <br />
             <div style=" padding-right: 2.5vw">
-            <div class="inner-scroll" style="float: left ;height: 42vh;">
+            <div class="inner-scroll" style="float: left ;height: 40vh;">
         
-                    <table cellspacing="100" class="table-striped">
+                    <table cellspacing="100" class="table-striped" style="width:550%;">
                         <thead>
                             <tr>
                                 @foreach (DataColumn item in Model.DailyData.Columns)
